Finished first two pages of General Electronics
Also added the two new pages you made to be ready to finish later.

I realised that I might have to surround all <picture> blocks and clusters with a <div> to allow flexbox for responsiveness; the <div> would be the flexbox parent, while the <picture>s are the flexbox children.

Added comments in the .yml files to help follow the scheme when adding new pages in the future.

--- a/projects/general-electronics/project-001-dc-to-dc-automatic-boost-buck-converter-5-32v-to-1.25-20v-5a-setup.html
+++ b/projects/general-electronics/project-001-dc-to-dc-automatic-boost-buck-converter-5-32v-to-1.25-20v-5a-setup.html
@@ -8,39 +8,96 @@ title: DC to DC Automatic Boost Buck Converter 5 - 32V to 1.25 - 20V 5A Setupw
 <section>
     <h3>Introduction</h3>
 
-    <p></p>
+    <p>This DC to DC Boost Buck Converter is an excellent tool to any electronic maker when in need of a higher or lower voltage from what you have on hand. With this module's 5 - 32V input voltage range and 1.25 - 20V output voltage range, you can be assured that there is plenty of voltage options you can choose from that scale to be fitted for most hobby electronic uses. ICStation's converter can also handle an excessive amount of current, up to 8 amps of current, so a lot of high-current devices can be eligible for use with this module.</p>
 
-    <p></p>
+    <p>You will also find that this converter is equipped with multiple layers of protection against over temperature, over voltage, over current and others. Thus, you will be safe when working with high power. Charging batteries, powering electronic appliances, collecting data and much more, are applications which you can use this boost buck converter for, regarding the electronics field.</p>
 
-    <p></p>
+    <p>Below, you can find some images of a voltage being stepped down and stepped up with a multimeter, hooked on both the input and output side to measure the voltage difference:</p>
+
+    <picture>
+        <source srcset="/assets/img/gen-elec/img-3642.webp" type="image/webp">
+        <img src="/assets/img/gen-elec/img-3642.jpg" alt="">
+    </picture>
+    <picture>
+        <source srcset="/assets/img/gen-elec/img-3642_1.webp" type="image/webp">
+        <img src="/assets/img/gen-elec/img-3642_1.jpg" alt="">
+    </picture>
+    <picture>
+        <source srcset="/assets/img/gen-elec/img-3645.webp" type="image/webp">
+        <img src="/assets/img/gen-elec/img-3645.jpg" alt="">
+    </picture>
+    <picture>
+        <source srcset="/assets/img/gen-elec/img-3649.webp" type="image/webp">
+        <img src="/assets/img/gen-elec/img-3649.jpg" alt="">
+    </picture>
 </section>
+
+<hr>
 
 <section>
-    <h3></h3>
+    <h3>Setting it up</h3>
 
-    <p></p>
+    <ol>
+        <li>
+            <picture>
+                <source srcset="/assets/img/gen-elec/img-3658.webp" type="image/webp">
+                <img src="/assets/img/gen-elec/img-3658.jpg" alt="">
+            </picture>
 
-    <p></p>
+            <p>Insert your input voltage supply (between 5 - 32 volts) into the input terminals of the converter as seen by the image above. Make sure that you follow the right input polarity as shown and the screws are fastened in place after inserting the input wires.</p>
+        </li>
 
-    <p></p>
+        <li>
+            <picture>
+                <source srcset="/assets/img/gen-elec/img-3661.webp" type="image/webp">
+                <img src="/assets/img/gen-elec/img-3661.jpg" alt="">
+            </picture>
+
+            <p>Insert the leads of a multimeter to the output of the power supply module. Make sure that your multimeter is set to measure DC voltage and the polarity of the leads you are inserting are right.</p>
+        </li>
+
+        <li>
+            <picture>
+                <source srcset="/assets/img/gen-elec/img-3664.webp" type="image/webp">
+                <img src="/assets/img/gen-elec/img-3664.jpg" alt="">
+            </picture>
+
+            <p>Turn the potentiometer clockwise to increase the output voltage and turn the potentiometer anticlockwise to decrease the output voltage depending on your load. Make sure you watch the output voltage reading on your multimeter as you rotate the potentiometer, to not exceed any inputs voltages to your load. For this example, we will demonstrate this module bucking a voltage. However, the same concept will apply when in boost mode.</p>
+        </li>
+
+        <li>
+            <picture>
+                <source srcset="/assets/img/gen-elec/img-3665.webp" type="image/webp">
+                <img src="/assets/img/gen-elec/img-3665.jpg" alt="">
+            </picture>
+
+            <p>Once your output voltage is correctly set, you can safely insert your load into the output screw terminals of your module and remove your multimeter. Make sure you check the polarity of your load before inserting it and make sure you screw the screw terminals to secure the load in place. The setup of this DC to DC converter is now finished!</p>
+        </li>
+    </ol>
 </section>
 
-<section>
-    <h3></h3>
-
-    <p></p>
-
-    <p></p>
-
-    <p></p>
-</section>
+<hr>
 
 <section>
     <h3>Conclusion</h3>
 
-    <p></p>
+    <p>After using this DC to DC Automatic Boost Buck Converter for most of my electronic projects, I have now seen what this product can truly do in the field and how it helps me as a maker. Thus, I would highly recommend this module to any maker due to its efficiency, its range of conversion and the protection consisted on-board.</p>
 
-    <p></p>
+    <p>With its high efficiency when dealing with high or low voltages (5 - 32 volts), you can be assured that your output voltage (1.25 - 20 volts) won't be affected with a heavy load, even with the current at 5 amps. Plus, this module's amount of protection will be good for anybody looking to experiment or test, while staying safe from any dangers to them, or the hardware.</p>
 
-    <p></p>
+    <p>Lastly, another important factor is its attractive price at around $8.44 for the whole module, which could be slightly more expensive, but, with its features, it will do you very well when using it.</p>
+
+    <p>All in all, this DC to DC converter from ICStation will be one of my top picks when referring to boost buck converters for average electronic usages.</p>
 </section>
+
+<hr>
+
+<div class="review-link">
+    <p>Be sure to check out the <a href="/reviews/product/review-014-dc-to-dc-automatic-boost-buck-converter-5-32v-to-125-20v-5a">review for this product here</a>!</p>
+</div>
+
+<hr>
+
+<div class="contact">
+    <p>Enjoy! Feel free to <a href="/contact.html">contact us</a> for any inquiries!</p>
+</div>
