First few Review pages done!
Will need to do Review 005 later before considering actual styling, since it's a long page and its layout is different from the first four review pages.

--- a/reviews/product/review-001-ky-008-laser-module.html
+++ b/reviews/product/review-001-ky-008-laser-module.html
@@ -3,7 +3,15 @@ layout: default
 title: KY-008 Laser Module
 ---
 
-<h1>{{ page.title }}</h1>
+<div class="banner">
+    <h1>{{ page.title }}</h1>
+    <p>Module has been kindly sponsored by <a href="http://www.icstation.com/index.php?aid=294">ICStation.com</a></p>
+
+    <picture>
+        <source srcset="/assets/img/product/picture-of-ky-008.webp" type="image/webp">
+        <img src="/assets/img/product/picture-of-ky-008.jpg" alt="KY-008 Laser Module">
+    </picture>
+</div>
 
 <section>
     <h3>Product Specifications</h3>
@@ -13,32 +21,32 @@ title: KY-008 Laser Module
 
 		<tr>
 			<th>Type:</th>
-			<td></td>
+			<td>Laser Transmitter Module</td>
 		</tr>
 		<tr>
 			<th>Architecture:</th>
-			<td></td>
+			<td>For Arduino</td>
 		</tr>
 		<tr>
-			<th></th>
-			<td></td>
+			<th>Wavelength:</th>
+			<td>650nm (Red)</td>
 		</tr>
+        <tr>
+            <th>Laser Power:</th>
+            <td>5mW</td>
+        </tr>
 	</table>
 
 	<table>
 		<caption>Power</caption>
 
 		<tr>
-			<th></th>
-			<td></td>
+			<th>Operating Voltage:</th>
+			<td>+5 volts</td>
 		</tr>
 		<tr>
-			<th></th>
-			<td></td>
-		</tr>
-		<tr>
-			<th></th>
-			<td></td>
+			<th>Output Current:</th>
+			<td>30mA</td>
 		</tr>
 	</table>
 
@@ -47,34 +55,32 @@ title: KY-008 Laser Module
 
 		<tr>
 			<th>Weight:</th>
-			<td></td>
+			<td>2g</td>
 		</tr>
 		<tr>
 			<th>Size (L × W × H):</th>
-			<td>××m</td>
-		</tr>
-		<tr>
-			<th></th>
-			<td></td>
+			<td>2.8cm × 1.95cm × 0.8cm</td>
 		</tr>
 	</table>
 </section>
+
+<hr>
 
 <section>
     <h3>Pinout</h3>
 
     <table>
 		<tr>
-			<th></th>
-			<td></td>
+			<th>- (left pin)</th>
+			<td>GND</td>
 		</tr>
 		<tr>
-			<th></th>
-			<td></td>
+			<th>+ (middle pin)</th>
+			<td>+5 volts</td>
 		</tr>
 		<tr>
-			<th></th>
-			<td></td>
+			<th>S (right pin)</th>
+			<td>Signal</td>
 		</tr>
 	</table>
 </section>
@@ -82,60 +88,76 @@ title: KY-008 Laser Module
 <section>
     <h3>Product Review</h3>
 
-    <p></p>
+    <p>Honestly, I think that I am impressed with this component because this product has a lot of positive remarks to go with it including:</p>
 
-    <p></p>
-
-    <p></p>
+    <ul>
+        <li>A powerful range, reaching up to 60ft and more.</li>
+        <li>It has good quality, not having any manufacturing faults or problems.</li>
+        <li>I used this with an Arduino Uno, and I'm able to easily program this module with ease, blinking the laser or using it as a strobe.</li>
+        <li>The software is very easy and short in terms of lines of code. </li>
+        <li>Since this module has very small dimensions, it can be mounted to almost any project and can be fitted in to any project box.</li>
+        <li>The hardware is very easy to connect to a micro-controller or programmer as it has only three pins (Signal, VCC and GND). </li>
+    </ul>
 </section>
 
-<section>
-    <h3>Datasheet</h3>
-
-	<p></p>
-
-    <p><a href=>Download File</a></p>
-</section>
+<hr>
 
 <section>
-<h3>Sample code</h3>
+    <h3>Sample code</h3>
 
-<p></p>
+    <p></p>
 
 	<figure>
-	    <figcaption>{{ page.title }} Code</figcaption>
+	    <figcaption>Arduino {{ page.title }} Sample Code</figcaption>
 
 	    <pre><code>
-			<!-- Code goes here. Make sure to delete this comment afterwards. -->
+    int laserPin = 10;
+    void setup ()
+    {
+       pinMode (laserPin, OUTPUT);
+    }
+    void loop () {
+       digitalWrite (laserPin, HIGH);
+       delay (1000);
+       digitalWrite (laserPin, LOW);
+       delay (500);
+    }
 		</code></pre>
 	</figure>
 
 </section>
 
+<hr>
+
 <section>
-    <h3>Product Page</h3>
+    <h3>ICStation Product Page</h3>
 
-    <img src=>
+    <picture>
+        <source srcset="/assets/img/product/screen-shot-2018-02-05-at-3-40-52-pm_orig.webp" type="image/webp">
+        <img src="/assets/img/product/screen-shot-2018-02-05-at-3-40-52-pm_orig.png" alt="">
+    </picture>
 
-    <p>Check out the product <a href=>here</a>: <a href=>link</a></p>
-
-    <p></p>
+    <p>Check out the product <a href="http://www.icstation.com/product_info.php?aid=294&products_id=2768">here</a>: <a href="http://www.icstation.com/product_info.php?aid=294&products_id=2768">http://www.icstation.com/product_info.php?aid=294&products_id=2768</a></p>
 </section>
 
 <hr>
 
 <div class=discount>
-	<p></p>
+	<p>For purchases from ICStation, use this code for a discount:</p>
+    <p class="code">Simics</p>
+    <p>Discount amount: 15% off<br>
+    Maximum use: 1 per user<br>
+    Amount Limit: 300</p>
 </div>
 
 <hr>
 
 <div class=project-link>
-	<p>Be sure to check out the <a href=>[relevant project page name text] here</a>!</p>
+	<p>Be sure to check out the <a href="/projects/arduino/project-007-ky-008-laser-module">Arduino KY-008 Laser Module Project here</a>!</p>
 </div>
 
 <hr>
 
 <div class=contact>
-	<p>Enjoy! Feel free to <a href=/contact>contact us<a> for any inquiries!</p>
+	<p>Enjoy! Feel free to <a href="/contact">contact us<a> for any inquiries!</p>
 </div>
